Fixed music bug, added expanding entries, adjusted jquery playlist vanish, fixed image grid spacing issue

--- a/_sass/music-grid.scss
+++ b/_sass/music-grid.scss
@@ -18,6 +18,7 @@
 
 .music-info {
 	overflow: hidden;
+	display: none;
 	border: 2px dashed $color-blood;
 	width: 50%;
 }
