--- a/_sass/playlist-timeline.scss
+++ b/_sass/playlist-timeline.scss
@@ -3,7 +3,8 @@
 }
 
 .playlist {
-	width: 19vw; 
+	width: 70vw; 
+	height: 50vh;
 	float: right;
 	opacity: 0;
 	transition: all 1s linear; //opacity 2s ease-in-out, height 3s ease-in-out;
