--- a/_sass/site-image.scss
+++ b/_sass/site-image.scss
@@ -12,5 +12,5 @@
 	column-gap: 2vw;
 	row-gap: 2vh;
 	height: auto;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: auto auto auto;
 }
